--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body class="page">
+    <div class="app"></div>
+  </body>
 </html>
