--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     />
   </head>
   <body class="page">
-    <div class="app"></div>
+    <div class="app">
+      <header class="header"></header>
+      <div class="sidebar"></div>
+      <section class="gallery"></section>
+      <section class="steps"></section>
+    </div>
   </body>
 </html>
