sidebar footer content and styling

--- a/index.html
+++ b/index.html
@@ -124,7 +124,19 @@
             </p>
           </div>
         </section>
-        <footer class="footer"></footer>
+        <footer class="footer">
+          <small class="copyright">
+            &copy; 2023 BetterPhotos. All rights reserved.
+          </small>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Terms & Conditions</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy Policy</a>
+            </li>
+          </ul>
+        </footer>
       </div>
 
       <section class="gallery"></section>
