--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,7 @@
             </p>
           </section>
         </section>
+
         <section class="upload">
           <div class="upload__container">
             <i class="fas fa-cloud-upload-alt upload__icon"></i>
@@ -124,10 +125,9 @@
             </p>
           </div>
         </section>
+
         <footer class="footer">
-          <small class="copyright">
-            &copy; 2023 BetterPhotos. All rights reserved.
-          </small>
+          <small class="copyright">&copy; 2050 BetterPhotos.</small>
           <ul class="footer__list">
             <li class="footer__item">
               <a href="#" class="footer__link">Terms & Conditions</a>
@@ -148,13 +148,10 @@
           />
           <p class="gallery__comment gallery__comment--1">
             <i class="fas fa-star gallery__icon"></i>
-
             <span class="gallery__number">10</span>
-
             Beautiful!
           </p>
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -162,7 +159,6 @@
             alt="Gallery image"
           />
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -171,13 +167,10 @@
           />
           <p class="gallery__comment gallery__comment--2">
             <i class="fas fa-star gallery__icon"></i>
-
             <span class="gallery__number">8</span>
-
             Great angle
           </p>
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -185,22 +178,18 @@
             alt="Gallery image"
           />
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
-            src="https://images.unsplash.com/photo-1566312296364-2199206933e5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&h=604&q=100"
+            src="https://images.unsplash.com/photo-1566312296364-2199206933e5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&h=604&q=120"
             alt="Gallery image"
           />
           <p class="gallery__comment gallery__comment--3">
             <i class="fas fa-star gallery__icon"></i>
-
             <span class="gallery__number">10</span>
-
             WOW
           </p>
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -208,7 +197,6 @@
             alt="Gallery image"
           />
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -217,13 +205,10 @@
           />
           <p class="gallery__comment gallery__comment--4">
             <i class="fas fa-star gallery__icon"></i>
-
             <span class="gallery__number">9</span>
-
             Lighting could be better
           </p>
         </div>
-
         <div class="gallery__img-wrapper">
           <img
             class="gallery__img"
@@ -236,32 +221,24 @@
       <section class="steps">
         <section class="step">
           <i class="fas fa-image step__icon step__icon--1"></i>
-
           <h2 class="second-heading">Upload photos</h2>
-
           <p class="step__text">
             Morbi id ipsum sed enim interdum hendrerit eget
             <span class="u-bold u-italic">quis dui</span>. Integer ad.
           </p>
         </section>
-
         <section class="step">
           <i class="fas fa-star step__icon step__icon--2"></i>
-
           <h2 class="second-heading">Get feedback</h2>
-
           <p class="step__text">
             Morbi id ipsum sed enim
             <span class="u-bold">interdum hendrerit</span> eget quis dui.
             Integer ad.
           </p>
         </section>
-
         <section class="step">
           <i class="fas fa-cogs step__icon step__icon--3"></i>
-
           <h2 class="second-heading">Improve your skill</h2>
-
           <p class="step__text">
             Morbi <span class="u-bold u-italic">id ipsum</span> sed enim
             interdum hendrerit eget quis dui. Integer ad.
